# whostyles

./: .gitignore  .npmignore  README.md  composer.json  go.work  package.json  rename_generator_textures.cjs  rename_textures.cjs  update_generator_js.cjs
.forgejo/workflows/: ci.yml
docs/: draft-freitas-whostyle-10.txt  draft-freitas-whostyle-20.txt  draft-freitas-whostyle-json-01.txt  draft-freitas-whostyle-json-11.txt
generator/: index.html
schema/: whostyle.schema.json
src/css/: textures.css  typography.css  whostyles.css
src/go/whostyles/: README.md  go.mod  whostyles.go
src/js/: README.md  whostyle-core.js  whostyle-dom.js  whostyle.js
src/php/: README.md  WhostyleProcessor.php  Whostyles.php
src/python/whostyles/: README.md  __init__.py  core.py  pyproject.toml
src/rust/whostyles/: Cargo.toml  README.md
src/rust/whostyles/src/: lib.rs
src/rust/whostyles/tests/: verify.rs
tests/: generate_matrix.cjs  go.mod  matrix.json  verify.php  verify_core.js  verify_engine.js  verify_go.go  verify_processor.php  verify_python.py
validator/: index.html
