[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whostyles"
version = "1.0.0"
authors = [
  { name="Lumen Freitas" },
]
description = "Whostyle V1: Structured, data-driven format for syndicating personal typographic and cosmetic styles"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
keywords = ["whostyles", "indieweb", "fediverse", "css", "syndication"]

[project.urls]
"Homepage" = "https://codeberg.org/whostyles/whostyles"
"Bug Tracker" = "https://codeberg.org/whostyles/whostyles/issues"
